# minutes_to_gh

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  typos.toml
src/: args.rs  doc_fragment.rs  engine.rs  error.rs  ircbot.rs  issue.rs  main.rs  manual.rs  outcome.rs  repositories.rs
