[package]
name = "minutes_to_gh"
description = "an IRC bot to link github issues and PRs to the minutes of the meetings where they were discussed"
version = "0.6.1"
homepage = "https://github.com/pchampin/minutes_to_gh"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.86"
async-stream = "0.3.5"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
ego-tree = "0.6.3"
env_logger = "0.11.5"
futures = "0.3.30"
governor = "0.6.3"
irc = { version = "1.0.0", features = ["channel-lists", "ctcp", "tls-rust"], default-features = false }
log = "0.4.22"
octocrab = "0.39.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["charset", "http2", "rustls-tls-native-roots"], default-features = false }
scraper = "0.20.0"
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
test-case = "3.3.1"
